// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSymmary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.3500
  </h1>
</div>
`;

exports[`should correctly render ExpensesSymmary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $123,124,566.4200
  </h1>
</div>
`;
